--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
                         <input class="zipCodeBox" name="nasnyZip" type="number">
                         <input type="Submit">
                       </form><br>
-                      <div>Package to:</div><br>
+                      <div class="packageToTxt"></div><br>
                       <p class="pdDisplay"></p>
                   </div>
               </div>
